--- a/404.md
+++ b/404.md
@@ -1,8 +1,9 @@
 ---
 layout: page
-title: 404 - Page not found
+title: Page not found
+permalink: /404.html
 ---
 
 Sorry, we can't find the page you are looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="display: block; margin: 0 auto; width: 400px;"/>]({{ site.baseurl }}/)
